examples/test/testpolicy1325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1325
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key30: value17
      key8: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value13
          key38: value4
      podSelector:
        matchLabels:
          key9: value42
          key32: value20
